--- a/src/assets/styles/home.module.scss
+++ b/src/assets/styles/home.module.scss
@@ -21,14 +21,14 @@
   }
 
   .text {
-    @include grid(46% 46%, 6%);
+    @include grid(56% 36%, 6%);
     align-items: center;
     padding: 0 130px;
 
     h1 {
       color: $primaryWhite;
-      line-height: 100px;
-      font-size: 100px;
+      line-height: 90px;
+      font-size: 90px;
       margin: 0;
 
       span {
@@ -55,6 +55,7 @@
         line-height: 28px;
         font-weight: 600;
         font-size: 16px;
+        width: 100%;
       }
     }
   }
@@ -150,6 +151,18 @@
   display: flex;
   height: 100vh;
 
+  .pattern_four {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+
+  .pattern_five {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+
   &_wrapper {
     justify-content: center;
     flex-direction: column;
@@ -162,8 +175,8 @@
     color: $primaryWhite;
     text-align: center;
     line-height: 48px;
-    font-size: 48px;
-    width: 820px;
+    font-size: 38px;
+    width: 730px;
     margin: 0;
 
     span {
@@ -173,13 +186,38 @@
 
   .testimonials {
     @include grid(30% 30% 30%, 3%);
-    margin-top: 8vh;
+    margin-top: 20vh;
 
     .testimonial,
     .clientInfo {
       display: flex;
       align-items: center;
       flex-direction: column;
+    }
+
+    .testimonial {
+      .reviewWrapper {
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        display: flex;
+
+        .quote {
+          position: absolute;
+          top: -30px;
+        }
+
+        .review {
+          color: $primaryWhite;
+          position: relative;
+          font-style: normal;
+          text-align: center;
+          line-height: 25px;
+          font-weight: 600;
+          font-size: 14px;
+          margin: 0 0 3vh;
+        }
+      }
     }
 
     .clientInfo {
@@ -191,6 +229,24 @@
         line-height: 28px;
         text-align: center;
         margin: 0;
+      }
+
+      .job {
+        color: $primaryWhite;
+        font-style: italic;
+        text-align: center;
+        line-height: 18px;
+        font-weight: 500;
+        font-size: 13px;
+        margin: 0;
+      }
+
+      .client {
+        border: 3px solid $secondaryLightBlue;
+        border-radius: 100%;
+        margin-top: 3vh;
+        height: 40px;
+        width: 40px;
       }
     }
   }
