--- a/src/assets/styles/navbar.module.scss
+++ b/src/assets/styles/navbar.module.scss
@@ -16,12 +16,21 @@
     margin: 0;
 
     li {
-      color: $primaryWhite;
-      line-height: 28px;
-      font-weight: 600;
       list-style: none;
-      font-size: 18px;
-      padding: 0 20px;
+      cursor: pointer;
+
+      a {
+        text-decoration: none;
+        color: $primaryWhite;
+        line-height: 28px;
+        font-weight: 600;
+        font-size: 18px;
+        padding: 0 20px;
+
+        &:hover {
+          color: $primaryCoral;
+        }
+      }
     }
 
     img {
