--- a/src/assets/styles/about.module.scss
+++ b/src/assets/styles/about.module.scss
@@ -21,11 +21,29 @@
     align-items: center;
     padding: 0 130px;
 
+    @media screen and (max-width: 768px) {
+      display: flex;
+      text-align: center;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 100px;
+    }
+
+    @media screen and (max-width: 420px) {
+      padding: 0 30px;
+    }
+
     h1 {
       color: $primaryWhite;
       line-height: 100px;
       font-size: 64px;
       margin: 0;
+
+      @media screen and (max-width: 420px) {
+        font-size: 40px;
+        line-height: 40px;
+      }
     }
 
     .rhs {
@@ -40,6 +58,10 @@
         width: 50px;
         height: 4px;
         margin: 0 0 15px;
+
+        @media screen and (max-width: 768px) {
+          display: none;
+        }
       }
 
       p {
@@ -85,11 +107,20 @@
     flex-direction: column;
     padding: 100px 130px 150px;
     display: flex;
+
+    @media screen and (max-width: 768px) {
+      padding: 100px 100px 150px;
+    }
   }
 
   .team {
     @include grid(31% 31% 31%, 3.3%);
     row-gap: 10vh;
+
+    @media screen and (max-width: 768px) {
+      @include grid(45% 45%, 10%);
+      row-gap: 5vh;
+    }
 
     .director {
       background-color: $secondarySacramentoGreen;
@@ -169,6 +200,10 @@
 
   &_wrapper {
     padding: 100px 130px;
+
+    @media screen and (max-width: 768px) {
+      padding: 150px 50px;
+    }
 
     h2 {
       color: $primaryWhite;
