--- a/src/assets/styles/footer.module.scss
+++ b/src/assets/styles/footer.module.scss
@@ -9,15 +9,69 @@
   padding: 50px 130px;
   @include grid(60% 30%, 10%);
 
+  @media screen and (max-width: 768px) {
+    padding: 50px 100px;
+    @include grid(45% 45%, 5%);
+  }
+
+  @media screen and (max-width: 420px) {
+    padding: 50px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   .rhs {
     justify-content: space-between;
     flex-direction: column;
     align-items: flex-end;
     display: flex;
 
+    @media screen and (max-width: 420px) {
+      align-items: center;
+    }
+
     .socials {
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+
+      @media screen and (max-width: 420px) {
+        display: block;
+        margin-bottom: 2vh;
+      }
+
       img {
         width: 18px;
+      }
+    }
+
+    .addressTab {
+      @media screen and (max-width: 768px) {
+        display: block;
+        margin-bottom: 2vh;
+      }
+
+      @media screen and (max-width: 420px) {
+        display: none;
+      }
+
+      display: none;
+
+      p {
+        mix-blend-mode: normal;
+        color: $primaryWhite;
+        line-height: 25px;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        opacity: 0.6;
+        margin: 0;
+
+        @media screen and (max-width: 768px) {
+          text-align: right;
+        }
       }
     }
 
@@ -37,6 +91,10 @@
     display: flex;
     align-items: flex-start;
 
+    @media screen and (max-width: 420px) {
+      flex-direction: column;
+    }
+
     .logo {
       justify-content: space-between;
       align-items: flex-start;
@@ -45,8 +103,16 @@
       display: flex;
       height: 100%;
 
+      @media screen and (max-width: 420px) {
+        margin: 0;
+      }
+
       img {
         width: 150px;
+
+        @media screen and (max-width: 420px) {
+          margin-bottom: 2vh;
+        }
       }
 
       ul {
@@ -54,6 +120,12 @@
         display: flex;
         padding: 0;
         margin: 0;
+
+        @media screen and (max-width: 420px) {
+          width: 100%;
+          margin-bottom: 2vh;
+          justify-content: center;
+        }
 
         li {
           list-style: none;
@@ -76,7 +148,33 @@
       }
     }
 
+    .socials {
+      @media screen and (max-width: 768px) {
+        display: block;
+      }
+
+      @media screen and (max-width: 420px) {
+        display: none;
+      }
+
+      display: none;
+
+      img {
+        width: 18px;
+      }
+    }
+
     .address {
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+
+      @media screen and (max-width: 420px) {
+        display: block;
+        margin-bottom: 3vh;
+        text-align: center;
+      }
+
       p {
         mix-blend-mode: normal;
         color: $primaryWhite;
