--- a/src/assets/styles/home.module.scss
+++ b/src/assets/styles/home.module.scss
@@ -12,12 +12,21 @@
   .pattern {
     position: absolute;
     left: -130px;
+
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
   }
 
   .pattern_two {
     position: absolute;
     bottom: -10px;
     right: 130px;
+
+    @media screen and (max-width: 420px) {
+      width: 100%;
+      right: 0;
+    }
   }
 
   .text {
@@ -25,11 +34,29 @@
     align-items: center;
     padding: 0 130px;
 
+    @media screen and (max-width: 768px) {
+      display: flex;
+      text-align: center;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 100px;
+    }
+
+    @media screen and (max-width: 420px) {
+      padding: 0 30px;
+    }
+
     h1 {
       color: $primaryWhite;
       line-height: 90px;
       font-size: 90px;
       margin: 0;
+
+      @media screen and (max-width: 420px) {
+        font-size: 40px;
+        line-height: 40px;
+      }
 
       span {
         color: $primaryCoral;
@@ -48,6 +75,10 @@
         width: 50px;
         height: 4px;
         margin: 0;
+
+        @media screen and (max-width: 768px) {
+          display: none;
+        }
       }
 
       p {
@@ -73,21 +104,44 @@
     position: absolute;
     right: 0;
     bottom: 0;
+
+    @media screen and (max-width: 768px) {
+      top: 0;
+    }
   }
 
   .wrapper {
     padding: 0 130px;
+
+    @media screen and (max-width: 768px) {
+      padding: 0 100px;
+    }
+
+    @media screen and (max-width: 420px) {
+      padding: 0 30px;
+    }
 
     .line {
       background-color: $primaryCoral;
       width: 50px;
       height: 4px;
       margin: 0 0 10vh 0;
+
+      @media screen and (max-width: 420px) {
+        margin-bottom: 5vh;
+      }
     }
 
     .text {
       @include grid(46% 46%, 6%);
       align-items: center;
+
+      @media screen and (max-width: 768px) {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+      }
 
       .lhs {
         display: flex;
@@ -101,6 +155,16 @@
           line-height: 48px;
           font-size: 48px;
           margin: 0;
+
+          @media screen and (max-width: 768px) {
+            margin-bottom: 5vh;
+          }
+
+          @media screen and (max-width: 420px) {
+            font-size: 32px;
+            line-height: 32px;
+            padding-right: 110px;
+          }
         }
       }
 
@@ -151,6 +215,11 @@
   display: flex;
   height: 100vh;
 
+  @media screen and (max-width: 768px) {
+    padding: 150px 0;
+    height: unset;
+  }
+
   .pattern_four {
     position: absolute;
     left: 0;
@@ -169,6 +238,10 @@
     align-items: center;
     padding: 0 130px;
     display: flex;
+
+    @media screen and (max-width: 768px) {
+      padding: 0 30px;
+    }
   }
 
   h2 {
@@ -179,6 +252,16 @@
     width: 730px;
     margin: 0;
 
+    @media screen and (max-width: 768px) {
+      width: 550px;
+    }
+
+    @media screen and (max-width: 420px) {
+      width: unset;
+      font-size: 29px;
+      line-height: 29px;
+    }
+
     span {
       color: $secondaryLightBlue;
     }
@@ -187,6 +270,13 @@
   .testimonials {
     @include grid(30% 30% 30%, 3%);
     margin-top: 20vh;
+
+    @media screen and (max-width: 768px) {
+      @include grid(100%, null);
+      row-gap: 10vh;
+      margin-top: 10vh;
+      // padding: 0 50px;
+    }
 
     .testimonial,
     .clientInfo {
@@ -216,6 +306,14 @@
           font-weight: 600;
           font-size: 14px;
           margin: 0 0 3vh;
+
+          @media screen and (max-width: 768px) {
+            width: 450px;
+          }
+
+          @media screen and (max-width: 420px) {
+            width: unset;
+          }
         }
       }
     }
@@ -247,6 +345,10 @@
         margin-top: 3vh;
         height: 40px;
         width: 40px;
+
+        @media screen and (max-width: 768px) {
+          margin-top: 1vh;
+        }
       }
     }
   }
