--- a/src/assets/styles/navbar.module.scss
+++ b/src/assets/styles/navbar.module.scss
@@ -3,38 +3,60 @@
 
 .container {
   background-color: $primaryGreen;
-  justify-content: space-between;
-  align-items: center;
   padding: 6vh 130px 4vh;
-  display: flex;
-  height: 6vh;
 
-  ul {
+  @media screen and (max-width: 768px) {
+    padding: 6vh 30px 4vh;
+  }
+
+  .dsktp {
+    justify-content: space-between;
     align-items: center;
     display: flex;
-    padding: 0;
-    margin: 0;
+    height: 6vh;
 
-    li {
-      list-style: none;
-      cursor: pointer;
-
-      a {
-        text-decoration: none;
-        color: $primaryWhite;
-        line-height: 28px;
-        font-weight: 600;
-        font-size: 18px;
-        padding: 0 20px;
-
-        &:hover {
-          color: $primaryCoral;
-        }
-      }
+    @media screen and (max-width: 420px) {
+      display: none;
     }
 
-    img {
-      padding-right: 50px;
+    ul {
+      align-items: center;
+      display: flex;
+      padding: 0;
+      margin: 0;
+
+      li {
+        list-style: none;
+        cursor: pointer;
+
+        a {
+          text-decoration: none;
+          color: $primaryWhite;
+          line-height: 28px;
+          font-weight: 600;
+          font-size: 18px;
+          padding: 0 20px;
+
+          &:hover {
+            color: $primaryCoral;
+          }
+        }
+      }
+
+      img {
+        padding-right: 50px;
+      }
+    }
+  }
+
+  .mobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    display: none;
+
+    @media screen and (max-width: 420px) {
+      display: flex;
     }
   }
 }
